compile_error.txt

> Task :compileJava FAILED
./gradlew : C:\Users\jan
1k\Projects\discord-mc-r
eward\src\main\java\stud
io\jan1k\boosterrewards\
discord\DiscordBot.java:
11: error: cannot find 
symbol
At line:1 char:1
+ ./gradlew compileJava 
--console=plain 2>&1 | 
Out-File -Encoding UTF8 
 ...
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (C:\Users\jan1k\.   
 ..not find symbol:S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
import net.dv8tion.jda.a
pi.interactions.componen
ts.buttons.Button;
                        
                        
          ^
  symbol:   class Button
  location: package net.
dv8tion.jda.api.interact
ions.components.buttons
C:\Users\jan1k\Projects\
discord-mc-reward\src\ma
in\java\studio\jan1k\boo
sterrewards\discord\Disc
ordBot.java:292: error: 
cannot find symbol
                .setActi
onRow(Button.primary("li
nk_account",
                        
      ^
  symbol:   variable 
Button
  location: class 
DiscordBot
Note: Some input files 
use or override a 
deprecated API.
Note: Recompile with 
-Xlint:deprecation for 
details.
2 errors

[Incubating] Problems report is available at: file:///C:/Users/jan1k/Projects/discord-mc-reward/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':compileJava'.
> Compilation failed; 
see the compiler output 
below.
  Note: Recompile with 
-Xlint:deprecation for d
etails.C:\Users\jan1k\Pr
ojects\discord-mc-reward
\src\main\java\studio\ja
n1k\boosterrewards\disco
rd\DiscordBot.java:11: 
error: cannot find 
symbol
  import net.dv8tion.jda
.api.interactions.compon
ents.buttons.Button;
                        
                        
            ^
    symbol:   class 
Button
    location: package ne
t.dv8tion.jda.api.intera
ctions.components.button
s
  C:\Users\jan1k\Project
s\discord-mc-reward\src\
main\java\studio\jan1k\b
oosterrewards\discord\Di
scordBot.java:292: 
error: cannot find 
symbol
                  .setAc
tionRow(Button.primary("
link_account",
                        
        ^
    symbol:   variable 
Button
    location: class 
DiscordBotNote: Some 
input files use or 
override a deprecated 
API.
  2 errors

* Try:
> Check your code and 
dependencies to fix the 
compilation error(s)
> Run with --scan to 
get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.12/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
1 actionable task: 1 executed
